# rust-trailer

./: .config.example.toml  .config.toml.example  .gitignore  Cargo.toml  README.md  RESOURCES.md  build.sh
bot/: Cargo.toml
bot/src/: _main.rs  bot.rs  csv.rs  error.rs  main.rs
bots/: new.toml
cli/: Cargo.toml
cli/src/: command2.rs  commands.rs  display.rs  input.rs  log.rs  main.rs
cli/src/commands/: buy_sell.rs  funds.rs  mod.rs  position.rs  rsi.rs  stop.rs
cli/src/display/: asset.rs  funds.rs  mod.rs  order.rs  position.rs  position_accumulated.rs  rsi.rs
cli/src/graphs/: mod.rs  rsi.rs
data/backtests/: new.csv
repl/: Cargo.toml
repl/src/: commands.rs  display.rs  main.rs  repl.rs
scripts/: build-elm.sh  db-fetch.sh  db-setup.sh  install.sh  serve.sh
server/: Cargo.toml
server/frontend/: elm.json
server/frontend/src/: App.elm
server/frontend/table/: Main.elm  View.elm
server/src/: controllers.rs  error.rs  import.rs  main.rs  setup.rs  views.rs
server/src/cache/: mod.rs
server/src/views/: funds.rs  mod.rs  position.rs  rsi.rs
server/static/: index.html
src/: bot.rs  coinmarketcap.rs  command.rs  command2.rs  config.rs  display.rs  error.rs  lib.rs  main.rs  types.rs
src/bot/: mod.rs
src/exchanges/: binance.rs  bittrex.rs  cobinhood.rs  kucoin.rs  mod.rs
src/indicators/: rsi.rs
src/models/: asset.rs  candlestick.rs  funds.rs  mod.rs  order.rs  position.rs  position_accumulated.rs  position_sum.rs  price.rs  trade_bucket.rs  trade_type.rs  trades.rs
src/presenters/: asset.rs  funds.rs  mod.rs  position.rs
src/socket/: binance.rs  mod.rs
src/threadpool/: mod.rs
src/types/: funds.rs  mod.rs  trades.rs
stats/src/: commands.rs
tgbot/: Cargo.toml
tgbot/src/: bot.rs  main.rs
trade/: Cargo.toml
trade/src/: command2.rs  commands.rs  display.rs  main.rs
tui/: Cargo.toml
tui/src/: commands.rs  main.rs
