[workspace]
members = ["cli", "bot", "repl", "tgbot", "server"]

[package]
name = "trailer"
version = "0.1.0"
authors = ["Rob Saunders <rob@wearebrandnew.com>"]

[dependencies]
restson = "^0.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "*"
binance = { git = "https://github.com/robsaunders/binance-rs.git" }
# binance = { path = "../_forks/binance-rs" }
#binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
kucoin = { git = "https://github.com/robsaunders/kucoin-rs.git" }
bitfinex = { git = "https://github.com/wisespace-io/bitfinex-rs.git" }
colored = "1.5"
docopt = "0.8"
bittrex-api = { git = "https://github.com/robsaunders/bittrex-api.git" }
toml = "*"
reqwest = "0.8.4"
math = "*"
rayon = "1.0"
chrono = "0.4"

# bot
ratelimit = "*"
itertools = "0.7.3"

# ta
ta-lib-wrapper = "0.1.1"

[lib]
name = "trailer"
