[package]
name = "server"
version = "0.1.0"
authors = ["Rob Saunders <rob@wearebrandnew.com>"]

[dependencies]
trailer = { path = "../" }
# ta = "0.1.0"
iron = "0.6"
router = "*"
staticfile = "*"
mount = "*"
horrorshow = "*"
toml = "*"
serde = "*"
serde_derive = "1.0"
regex = "0.2"
rusqlite = "0.13"

[[bin]]
name = "import"
doc = false
path = "src/import.rs"

[[bin]]
name = "setup"
doc = false
path = "src/setup.rs"

[[bin]]
name = "serve"
doc = false
path = "src/main.rs"
